--- a/jardinzoo_scrapping_fish_reptiles.ipynb
+++ b/jardinzoo_scrapping_fish_reptiles.ipynb
@@ -37,8 +37,8 @@
    "outputs": [],
    "source": [
     "#Variables\n",
-    "website = 'https://jardinzoo.cl/aves-168'\n",
-    "fileName = 'birdsProducts'\n",
+    "website = 'https://jardinzoo.cl/peces-reptiles-y-anfibios-169'\n",
+    "fileName = 'fishAndReptilesProducts'\n",
     "folder = 'jardinzoo'"
    ]
   },
