--- a/superzoo_scrapping_little_pets.ipynb
+++ b/superzoo_scrapping_little_pets.ipynb
@@ -2,63 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7a796dd2-2e21-435d-bf68-3490292927b3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: selenium-wire in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from -r requirements.txt (line 1)) (5.1.0)\n",
-      "Requirement already satisfied: blinker==1.7.0 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from -r requirements.txt (line 2)) (1.7.0)\n",
-      "Requirement already satisfied: selenium in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from -r requirements.txt (line 3)) (4.25.0)\n",
-      "Requirement already satisfied: brotli>=1.0.9 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium-wire->-r requirements.txt (line 1)) (1.1.0)\n",
-      "Requirement already satisfied: certifi>=2019.9.11 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium-wire->-r requirements.txt (line 1)) (2024.8.30)\n",
-      "Requirement already satisfied: kaitaistruct>=0.7 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium-wire->-r requirements.txt (line 1)) (0.10)\n",
-      "Requirement already satisfied: pyasn1>=0.3.1 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium-wire->-r requirements.txt (line 1)) (0.6.1)\n",
-      "Requirement already satisfied: pyOpenSSL>=22.0.0 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium-wire->-r requirements.txt (line 1)) (24.2.1)\n",
-      "Requirement already satisfied: pyparsing>=2.4.2 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium-wire->-r requirements.txt (line 1)) (3.2.0)\n",
-      "Requirement already satisfied: pysocks>=1.7.1 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium-wire->-r requirements.txt (line 1)) (1.7.1)\n",
-      "Requirement already satisfied: wsproto>=0.14 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium-wire->-r requirements.txt (line 1)) (1.2.0)\n",
-      "Requirement already satisfied: zstandard>=0.14.1 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium-wire->-r requirements.txt (line 1)) (0.23.0)\n",
-      "Requirement already satisfied: h2>=4.0 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium-wire->-r requirements.txt (line 1)) (4.1.0)\n",
-      "Requirement already satisfied: hyperframe>=6.0 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium-wire->-r requirements.txt (line 1)) (6.0.1)\n",
-      "Requirement already satisfied: pydivert>=2.0.3 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium-wire->-r requirements.txt (line 1)) (2.1.0)\n",
-      "Requirement already satisfied: urllib3<3,>=1.26 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium->-r requirements.txt (line 3)) (2.2.3)\n",
-      "Requirement already satisfied: trio~=0.17 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium->-r requirements.txt (line 3)) (0.26.2)\n",
-      "Requirement already satisfied: trio-websocket~=0.9 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium->-r requirements.txt (line 3)) (0.11.1)\n",
-      "Requirement already satisfied: typing_extensions~=4.9 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium->-r requirements.txt (line 3)) (4.12.2)\n",
-      "Requirement already satisfied: websocket-client~=1.8 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from selenium->-r requirements.txt (line 3)) (1.8.0)\n",
-      "Requirement already satisfied: hpack<5,>=4.0 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from h2>=4.0->selenium-wire->-r requirements.txt (line 1)) (4.0.0)\n",
-      "Requirement already satisfied: cryptography<44,>=41.0.5 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from pyOpenSSL>=22.0.0->selenium-wire->-r requirements.txt (line 1)) (43.0.1)\n",
-      "Requirement already satisfied: attrs>=23.2.0 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from trio~=0.17->selenium->-r requirements.txt (line 3)) (24.2.0)\n",
-      "Requirement already satisfied: sortedcontainers in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from trio~=0.17->selenium->-r requirements.txt (line 3)) (2.4.0)\n",
-      "Requirement already satisfied: idna in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from trio~=0.17->selenium->-r requirements.txt (line 3)) (3.10)\n",
-      "Requirement already satisfied: outcome in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from trio~=0.17->selenium->-r requirements.txt (line 3)) (1.3.0.post0)\n",
-      "Requirement already satisfied: sniffio>=1.3.0 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from trio~=0.17->selenium->-r requirements.txt (line 3)) (1.3.1)\n",
-      "Requirement already satisfied: cffi>=1.14 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from trio~=0.17->selenium->-r requirements.txt (line 3)) (1.17.1)\n",
-      "Requirement already satisfied: h11<1,>=0.9.0 in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from wsproto>=0.14->selenium-wire->-r requirements.txt (line 1)) (0.14.0)\n",
-      "Requirement already satisfied: pycparser in c:\\users\\user\\desktop\\3dsoft2024\\clientes\\scrapping petshot\\scrapping\\scrapping_v1\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium->-r requirements.txt (line 3)) (2.22)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.0 -> 24.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install -r requirements.txt"
+    "%pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6881d8a1-415f-455e-886e-40d7b43e884e",
    "metadata": {},
    "outputs": [],
@@ -77,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "74fdb554-363b-465f-b5db-34d6c560fcc7",
    "metadata": {},
    "outputs": [],
@@ -90,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ce7a87ac-805f-450d-8cf9-bf9348115615",
    "metadata": {},
    "outputs": [],
@@ -111,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "901bbde2-efe7-44bb-bc83-172e18df9b15",
    "metadata": {},
    "outputs": [],
@@ -122,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7504a3f5-73f0-412e-95a5-6f05c7b2ce62",
    "metadata": {},
    "outputs": [],
@@ -147,41 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7d724bcb-e477-456c-90a8-3c3f16e41fec",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'image_url': 'https://www.superzoo.cl/on/demandware.static/-/Sites-SuperZoo-master-catalog/default/dwe1b02519/images/b46e6-ac-11.jpg', 'product_url': 'https://www.superzoo.cl/pequenas-mascotas/mamiferos-pequenos/timothy-rabbit-diet/5336_m.html', 'brand': 'Mazuri', 'description': 'Timothy Rabbit Diet'}, {'image_url': 'https://www.superzoo.cl/on/demandware.static/-/Sites-SuperZoo-master-catalog/default/dwcebaa38b/images/46347-sustrato-carefresh-confetti.jpg', 'product_url': 'https://www.superzoo.cl/pequenas-mascotas/mamiferos-pequenos/sustrato-carefresh-confetti-10-lt/9252.html', 'brand': 'Healthypet', 'description': 'Sustrato carefresh confetti 10 LT'}, {'image_url': 'https://www.superzoo.cl/on/demandware.static/-/Sites-SuperZoo-master-catalog/default/dw2e2f47b5/images/12593-sustrato-grande-1-1.jpg', 'product_url': 'https://www.superzoo.cl/pequenas-mascotas/mamiferos-pequenos/my-pet-litter/5330_m.html', 'brand': 'Zupet', 'description': 'My Pet Litter'}, {'image_url': 'https://www.superzoo.cl/on/demandware.static/-/Sites-SuperZoo-master-catalog/default/dwe6081d49/images/7190c-diseno-sin-titulo.png', 'product_url': 'https://www.superzoo.cl/pequenas-mascotas/mamiferos-pequenos/mpets-botella-de-vidrio-para-pequenas-mascotas-350ml/9643.html', 'brand': 'Mpets', 'description': 'Mpets botella de vidrio para pequeñas mascotas 350ML'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(products)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "17524ed2-da75-49e7-80ca-d16c7fce086f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.superzoo.cl/on/demandware.store/Sites-SuperZoo-Site/es_CL/Product-Variation?dwvar_5336__m_Variation-ML_Peso=2,5%20KG&pid=5336_m&quantity=1\n",
-      "https://www.superzoo.cl/on/demandware.store/Sites-SuperZoo-Site/es_CL/Product-Variation?dwvar_5336__m_Variation-ML_Peso=2,5%20KG&pid=5336_m&quantity=1\n",
-      "https://www.superzoo.cl/on/demandware.store/Sites-SuperZoo-Site/es_CL/Product-Variation?dwvar_5336__m_Variation-ML_Peso=2,5%20KG&pid=5336_m&quantity=1\n",
-      "https://www.superzoo.cl/on/demandware.store/Sites-SuperZoo-Site/es_CL/Product-Variation?dwvar_5330__m_Formato=10LT&pid=5330_m&quantity=1\n",
-      "https://www.superzoo.cl/on/demandware.store/Sites-SuperZoo-Site/es_CL/Product-Variation?dwvar_5336__m_Variation-ML_Peso=2,5%20KG&pid=5336_m&quantity=1\n",
-      "https://www.superzoo.cl/on/demandware.store/Sites-SuperZoo-Site/es_CL/Product-Variation?dwvar_5330__m_Formato=10LT&pid=5330_m&quantity=1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for product in products:\n",
     "    driver.get(product['product_url'])\n",
@@ -210,36 +143,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b19463d8-1cb5-4502-ae82-46259c518b5a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'image_url': 'https://www.superzoo.cl/on/demandware.static/-/Sites-SuperZoo-master-catalog/default/dwe1b02519/images/b46e6-ac-11.jpg', 'product_url': 'https://www.superzoo.cl/pequenas-mascotas/mamiferos-pequenos/timothy-rabbit-diet/5336_m.html', 'brand': 'Mazuri', 'description': 'Timothy Rabbit Diet', 'ean': '62196407371000', 'name': 'Timothy Rabbit Diet', 'product_weight': 2.5, 'item_category': 'mamiferos', 'price': 22672, 'currency': 'CLP'}, {'image_url': 'https://www.superzoo.cl/on/demandware.static/-/Sites-SuperZoo-master-catalog/default/dwcebaa38b/images/46347-sustrato-carefresh-confetti.jpg', 'product_url': 'https://www.superzoo.cl/pequenas-mascotas/mamiferos-pequenos/sustrato-carefresh-confetti-10-lt/9252.html', 'brand': 'Mazuri', 'description': 'Sustrato carefresh confetti 10 LT', 'ean': '62196407371000', 'name': 'Timothy Rabbit Diet', 'product_weight': 2.5, 'item_category': 'mamiferos', 'price': 22672, 'currency': 'CLP'}, {'image_url': 'https://www.superzoo.cl/on/demandware.static/-/Sites-SuperZoo-master-catalog/default/dw2e2f47b5/images/12593-sustrato-grande-1-1.jpg', 'product_url': 'https://www.superzoo.cl/pequenas-mascotas/mamiferos-pequenos/my-pet-litter/5330_m.html', 'brand': 'Zupet', 'description': 'My Pet Litter', 'ean': '19213594619', 'name': 'My Pet Litter', 'product_weight': 0.5, 'item_category': 'mamiferos', 'price': 12142, 'currency': 'CLP'}, {'image_url': 'https://www.superzoo.cl/on/demandware.static/-/Sites-SuperZoo-master-catalog/default/dwe6081d49/images/7190c-diseno-sin-titulo.png', 'product_url': 'https://www.superzoo.cl/pequenas-mascotas/mamiferos-pequenos/mpets-botella-de-vidrio-para-pequenas-mascotas-350ml/9643.html', 'brand': 'Zupet', 'description': 'Mpets botella de vidrio para pequeñas mascotas 350ML', 'ean': '19213594619', 'name': 'My Pet Litter', 'product_weight': 0.5, 'item_category': 'mamiferos', 'price': 12142, 'currency': 'CLP'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(products)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "465784cf-6fa5-48bb-af5d-f3981a7dff77",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Archivo JSON generado correctamente.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(f\"{folder}/{fileName}.json\", 'w', encoding='utf-8') as json_file:\n",
     "    json.dump(products, json_file, ensure_ascii=False, indent=4)\n",
@@ -249,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "96d36483-053c-47a6-bf98-923fccaea2ea",
    "metadata": {},
    "outputs": [],
