--- a/processing_data.ipynb
+++ b/processing_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f7f9b41b-2563-45f5-ac4b-c8f4861d67b9",
    "metadata": {},
    "outputs": [],
@@ -14,84 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b9be685f-0ad4-4b2d-b9ef-bdcac7ba7e99",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting libsql-experimental\n",
-      "  Using cached libsql_experimental-0.0.41.tar.gz (28 kB)\n",
-      "  Installing build dependencies: started\n",
-      "  Installing build dependencies: finished with status 'done'\n",
-      "  Getting requirements to build wheel: started\n",
-      "  Getting requirements to build wheel: finished with status 'done'\n",
-      "  Preparing metadata (pyproject.toml): started\n",
-      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
-      "Building wheels for collected packages: libsql-experimental\n",
-      "  Building wheel for libsql-experimental (pyproject.toml): started\n",
-      "  Building wheel for libsql-experimental (pyproject.toml): finished with status 'error'\n",
-      "Failed to build libsql-experimental\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  error: subprocess-exited-with-error\n",
-      "  \n",
-      "  × Building wheel for libsql-experimental (pyproject.toml) did not run successfully.\n",
-      "  │ exit code: 1\n",
-      "  ╰─> [38 lines of output]\n",
-      "      Running `maturin pep517 build-wheel -i c:\\Users\\User\\Desktop\\3DSOFT2024\\Clientes\\SCRAPPING PETSHOT\\web-scrapper-core\\scrapping_v1\\Scripts\\python.exe --compatibility off`\n",
-      "      ðŸ“¦ Including license file \"C:\\Users\\User\\AppData\\Local\\Temp\\pip-install-xsusr4be\\libsql-experimental_476a1479a51546a9b3348a0d7ddfd3db\\LICENSE.md\"\n",
-      "      ðŸ”— Found pyo3 bindings\n",
-      "      ðŸ\\x90\\x8d Found CPython 3.12 at c:\\Users\\User\\Desktop\\3DSOFT2024\\Clientes\\SCRAPPING PETSHOT\\web-scrapper-core\\scrapping_v1\\Scripts\\python.exe\n",
-      "      ðŸ“¡ Using build options features from pyproject.toml\n",
-      "      \u001b[1m\u001b[32m   Compiling\u001b[0m proc-macro2 v1.0.86\n",
-      "      \u001b[1m\u001b[32m   Compiling\u001b[0m unicode-ident v1.0.12\n",
-      "      \u001b[1m\u001b[32m   Compiling\u001b[0m windows_x86_64_msvc v0.52.6\n",
-      "      \u001b[1m\u001b[32m   Compiling\u001b[0m version_check v0.9.5\n",
-      "      \u001b[1m\u001b[32m   Compiling\u001b[0m cfg-if v1.0.0\n",
-      "      \u001b[1m\u001b[32m   Compiling\u001b[0m autocfg v1.3.0\n",
-      "      \u001b[1m\u001b[32m   Compiling\u001b[0m serde v1.0.204\n",
-      "      \u001b[1m\u001b[32m   Compiling\u001b[0m pin-project-lite v0.2.14\n",
-      "      \u001b[1m\u001b[32m   Compiling\u001b[0m once_cell v1.19.0\n",
-      "      \u001b[1m\u001b[32m   Compiling\u001b[0m smallvec v1.13.2\n",
-      "      \u001b[1m\u001b[32m   Compiling\u001b[0m cc v1.1.6\n",
-      "      \u001b[1m\u001b[32m   Compiling\u001b[0m parking_lot_core v0.9.10\n",
-      "      \u001b[0m\u001b[1m\u001b[38;5;9merror\u001b[0m\u001b[0m\u001b[1m\u001b[38;5;15m: linker `link.exe` not found\u001b[0m\n",
-      "      \u001b[0m  \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;14m|\u001b[0m\n",
-      "      \u001b[0m  \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;14m= \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;15mnote\u001b[0m\u001b[0m: program not found\u001b[0m\n",
-      "      \n",
-      "      \u001b[0m\u001b[1m\u001b[38;5;10mnote\u001b[0m\u001b[0m\u001b[1m\u001b[38;5;15m: the msvc targets depend on the msvc linker but `link.exe` was not found\u001b[0m\n",
-      "      \n",
-      "      \u001b[0m\u001b[1m\u001b[38;5;10mnote\u001b[0m\u001b[0m\u001b[1m\u001b[38;5;15m: please ensure that Visual Studio 2017 or later, or Build Tools for Visual Studio were installed with the Visual C++ option.\u001b[0m\n",
-      "      \n",
-      "      \u001b[0m\u001b[1m\u001b[38;5;10mnote\u001b[0m\u001b[0m\u001b[1m\u001b[38;5;15m: VS Code is a different product, and is not sufficient.\u001b[0m\n",
-      "      \n",
-      "      \u001b[1m\u001b[32m   Compiling\u001b[0m scopeguard v1.2.0\n",
-      "      \u001b[1m\u001b[32m   Compiling\u001b[0m futures-core v0.3.30\n",
-      "      \u001b[1m\u001b[31merror\u001b[0m\u001b[1m:\u001b[0m could not compile `windows_x86_64_msvc` (build script) due to 1 previous error\n",
-      "      \u001b[1m\u001b[33mwarning\u001b[0m\u001b[1m:\u001b[0m build failed, waiting for other jobs to finish...\n",
-      "      \u001b[1m\u001b[31merror\u001b[0m\u001b[1m:\u001b[0m could not compile `proc-macro2` (build script) due to 1 previous error\n",
-      "      \u001b[1m\u001b[31merror\u001b[0m\u001b[1m:\u001b[0m could not compile `parking_lot_core` (build script) due to 1 previous error\n",
-      "      \u001b[1m\u001b[31merror\u001b[0m\u001b[1m:\u001b[0m could not compile `serde` (build script) due to 1 previous error\n",
-      "      ðŸ’¥ maturin failed\n",
-      "        Caused by: Failed to build a native library through cargo\n",
-      "        Caused by: Cargo build finished with \"exit code: 101\": `\"cargo\" \"rustc\" \"--features\" \"pyo3/extension-module\" \"--message-format\" \"json-render-diagnostics\" \"--manifest-path\" \"C:\\\\Users\\\\User\\\\AppData\\\\Local\\\\Temp\\\\pip-install-xsusr4be\\\\libsql-experimental_476a1479a51546a9b3348a0d7ddfd3db\\\\Cargo.toml\" \"--release\" \"--lib\"`\n",
-      "      Error: command ['maturin', 'pep517', 'build-wheel', '-i', 'c:\\\\Users\\\\User\\\\Desktop\\\\3DSOFT2024\\\\Clientes\\\\SCRAPPING PETSHOT\\\\web-scrapper-core\\\\scrapping_v1\\\\Scripts\\\\python.exe', '--compatibility', 'off'] returned non-zero exit status 1\n",
-      "      [end of output]\n",
-      "  \n",
-      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "  ERROR: Failed building wheel for libsql-experimental\n",
-      "ERROR: ERROR: Failed to build installable wheels for some pyproject.toml based projects (libsql-experimental)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Se requiere instalar rust y cargo, link: https://rustup.rs/\n",
     "%pip install libsql-experimental"
@@ -99,22 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ce14678a-17c0-43fc-bd23-78fa994d4ac2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'libsql_experimental'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\User\\Desktop\\3DSOFT2024\\Clientes\\SCRAPPING PETSHOT\\web-scrapper-core\\processing_data.ipynb Celda 3\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/3DSOFT2024/Clientes/SCRAPPING%20PETSHOT/web-scrapper-core/processing_data.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mlibsql_experimental\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mlibsql\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/3DSOFT2024/Clientes/SCRAPPING%20PETSHOT/web-scrapper-core/processing_data.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m url \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mgetenv(\u001b[39m\"\u001b[39m\u001b[39mTURSO_DATABASE_URL\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/3DSOFT2024/Clientes/SCRAPPING%20PETSHOT/web-scrapper-core/processing_data.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m auth_token \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mgetenv(\u001b[39m\"\u001b[39m\u001b[39mTURSO_AUTH_TOKEN\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'libsql_experimental'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import libsql_experimental as libsql\n",
     "\n",
@@ -182,22 +96,7 @@
    "execution_count": null,
    "id": "14a46d85-3b1c-4d08-9a57-9aded9cbf9cf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "624 Productos con ean y price -> En superzoo/dogsProducts de 708\n",
-      "342 Productos con ean y price -> En superzoo/catsProducts de 363\n",
-      "6 Productos con ean y price -> En superzoo/littlePetsProducts de 6\n",
-      "819 Productos con ean y price -> En jardinzoo/dogsProducts de 1207\n",
-      "437 Productos con ean y price -> En jardinzoo/catsProducts de 717\n",
-      "5 Productos con ean y price -> En jardinzoo/birdsProducts de 5\n",
-      "63 Productos con ean y price -> En jardinzoo/rodentsProducts de 64\n",
-      "8 Productos con ean y price -> En jardinzoo/fishAndReptilesProducts de 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Get Data\n",
     "import json\n",
@@ -233,8 +132,26 @@
     "filter_data(jardinzoo_cats, 'jardinzoo/catsProducts')\n",
     "filter_data(jardinzoo_birds, 'jardinzoo/birdsProducts')\n",
     "filter_data(jardinzoo_rodents, 'jardinzoo/rodentsProducts')\n",
-    "filter_data(jardinzoo_fish_reptiles, 'jardinzoo/fishAndReptilesProducts')"
+    "filter_data(jardinzoo_fish_reptiles, 'jardinzoo/fishAndReptilesProducts')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31cde50e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dogs_without_ean = len(list(filter(lambda item: item['ean'] == \"\" or item['price'] == \"\", jardinzoo_dogs)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54299ead",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
